--- a/src/components/atoms/ShopItem/index.scss
+++ b/src/components/atoms/ShopItem/index.scss
@@ -17,3 +17,10 @@
     opacity: 0.8;
 }
 
+.card-header {
+    .shop-image {
+        margin-right: 5px;
+        max-width: 50px;
+        max-height: 50px;
+    }
+}
