--- a/src/components/atoms/ProductItem/index.scss
+++ b/src/components/atoms/ProductItem/index.scss
@@ -7,6 +7,11 @@
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     .image-container {
         padding: 5px;
+        text-align: center;
+        height: 130px;
+        img {
+            max-height: 120px;
+        }
     }
 }
 
