--- a/src/components/templates/MobileLayout/index.scss
+++ b/src/components/templates/MobileLayout/index.scss
@@ -19,15 +19,23 @@
             i::before{
                 margin-right: 5px;
             }
+            a {
+                color: #F5F5F5;
+            }
         }
     }
 
     .body-content {
-        height: calc(100vh - 85px);
         width: 100%;
         overflow-y: auto;
+        overflow-x: hidden;
         background-color: #F5F5F5;
         color: #0a0a0a;
+        height: calc(100vh - 35px);
+    }
+
+    .body-content.has-footer{
+        height: calc(100vh - 85px);
     }
 
     .foot-menu {
