--- a/src/components/atoms/ProductItem/index.scss
+++ b/src/components/atoms/ProductItem/index.scss
@@ -166,6 +166,17 @@
     }
 }
 
+.edit {
+    font-size: 12px;
+    color: #007bff;
+    font-weight: bold;
+    cursor: pointer !important;
+    .btn {
+        min-width: auto !important;
+        line-height: 0.5;
+    }
+}
+
 .voutchers {
     background-color: #fff;
     border: none;
